test/bad/types2.px

if 42:
    a = false
